[package]
name = "icmp_vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "derive" ] }
bytes = "1"
anyhow = "1"
pcap = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1"
bytemuck = { version = "1", features = [ "derive" ] }